# xuefu

./: .gitignore  CTP_README.md  QuickStart.md  README.md  README.txt  __init__.py  code.csv  code_inuse.csv  constant  constant.py  data.py  data_sql.py  formular.py  pyalg_2.py  pyalg_test.py
api/ctp/: md.py
api/ctp/ctp_x64/: ctpmd.pyd
api/ctp/test/: md.py  td.py
api/ctpx/: bar_event_listener.py  ctpmd.py  ctptd.py
api/stock/csv/: 000007.csv  600281SH_5min.csv  600847.csv  600848.csv  code_inuse.csv  orcl-2000.csv
api/stock/histmd/: to_csv_md.py  to_postgres_md.py
api/stock/lib/: gm_api.py
cmak_ctp/: base.h
cmake_ctp/ctpmd/: CMakeLists.txt
cmake_ctp/ctptd/: CMakeLists.txt
cmake_ctp/md/: ctpmd.h
cmake_ctp/script/: generate.pl
cmake_ctp/td/: ctptd.cpp
cn/cn/lib/: dataFrameBarfeed.py  (+2 more)
cn/lib/: bar.py  dataFramefeed.py  pyalg_utils.py  tickfeed.py
cnx/: dataFramefeed.py  tickds.py  tickfeed.py
cnx/broker/: tickBacktestingBroker.py  tickFillStrategy.py
cnx/ctp/: ctp_live_feed.py
cnx/strategy/: __init__.py  tickBacktestStrategy.py  tickPosition.py
cnx/tushare/: tushareLiveFeed.py  tushareTickLiveFeed.py
ctpx/ctp2/: ctpmd.py  ctptd.py
ctpx/ctp3/: ctpmd.py  ctptd.py
dao/: foundamental_dao.py  k_data_dao.py  k_index_dao.py
demo/: README.md
demo/backtest/: csvDemo.py  dynamicIndicatorDemo.py  dynamicIndicatorDemo_run.py  indexBBcurveDemo.py  minuWithDayDemo.py  minuWithDayDemo_run.py  pandasDemo.py  pandasDemo_run.py  porfolioDemo.py  sqlDemo.py  talibDemo.py  tickDemo.py
demo/live/: ctpdemo.py  tushareDemo.py  tushareTickDemo.py
dev/cmake_ctp/: CMakeLists.txt  README.md
dev/cmake_ctp/ctpmd/: ctpmd.cpp
dev/cmake_ctp/ctptd/: ctptd.h
dev/cmake_ctp/script/: README.md  apiDataType.pl  extractStructWrapper.pl  extractType.sh  structExporter.pl  structWrapper.pl
dev/cmake_ctp_new/: .gitignore  CMakeLists.txt  README.md  base.cpp  base.h  ctp编译文档.docx
docker/py2.7/: Dockerfile  gmsdk-2.9.5-py2-none-any.whl
strategy/: BBcurve_run.py  KDJ.py  kdj_new.py
utils/: 000002.csv  BBcurve2.py  ListDeque.py  baseUtils.py  dataFramefeed.py  formular.py  logger_factory.py  wapper_interface.py
(+27 files in other folders)
