#get_directory_property(include_dirs INCLUDE_DIRECTORIES)
#message(${include_dirs})
set(SOURCE_FILES ctpmd.h ctpmd.cpp)
add_library(ctpmd SHARED ${SOURCE_FILES})
set_target_properties(ctpmd PROPERTIES PREFIX "")
if(WIN32)
    set_target_properties(ctpmd PROPERTIES SUFFIX ".pyd")
endif(WIN32)
target_link_libraries(ctpmd ${CTP_MD_LIBRARY} ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})